Revision history for DBIx-TableLoader

{{$NEXT}}

1.003     2012-07-09T19:14:14Z

  - Simplify validation error messages by excluding
    (internal) file/line position when die()ing
    and removing trailing newline when passing message to handler

1.002     2012-07-07T21:49:40Z

  - Enable custom error handling via 'handle_invalid_row' option
  - use Try::Tiny;

1.001     2011-07-14T23:33:27Z

  - Make DBI tests regular tests rather than author tests
  - Superficial dist/release changes

1.000     2011-02-28T04:13:37Z

  - Initial release