@@ -2,6 +2,9 @@ Revision history for DBIx-TableLoader
 
 {{$NEXT}}
 
+  [Tests]
+  - Remove Test::MockObject in favor of reusable test module.
+
 1.003     2012-07-09T19:14:14Z
 
   - Simplify validation error messages by excluding
